--- a/about.html
+++ b/about.html
@@ -9,7 +9,8 @@
 <body>
     <h1>About</h1>
     <a href="index.html">Home</a>
-    <p>Welcom to my about Page</p>
+    <p>Welcom to my great about Page</p>
+    <p>My name is Izuka</p>
     
 </body>
 </html>
